# ParallelCodeEstimation

./: .gitignore  CMakeLists.txt  README.md  gatherData.py  requirements.txt  runBuild.sh  visualizeGatheredData.ipynb
analysis/: scrapeCUDAKernels.py  simpleScrapeCUDAKernels.py  simpleScrapeKernels.py  testSystemPrompts.ipynb  visualizeGatheredData-withInt.ipynb  visualizeGatheredData-withLaunchData.ipynb  visualizeGatheredData.ipynb  vizAndPruneScrapedCUDAKernels.ipynb  vizAndPruneScrapedKernels.ipynb  vizScrapedCUDAKernels.ipynb
dataset-gen/: createTrainingDataset.ipynb  createZeroShotDataset.ipynb  doGPT4o-training.ipynb  roofline_utils.py  runFewShotTrials.ipynb  runFewShotTrials.py  runTrainedModelInference.ipynb  runZeroShotTrials-OLD.ipynb  runZeroShotTrials.ipynb  tabulateAllResultCSVs.py  vizFewShotData.ipynb  vizTrainedInferenceData.ipynb  vizZeroShotData.ipynb  writeScrapedKernelWithPromptToFile.py
few-shot-examples/: cuda_BB_kernel.cu  cuda_CB_kernel.cu  omp_BB_kernel.cpp  omp_CB_kernel.cpp
results/: zero-shot-results.csv
simple-roofline-survey/: doCOTRuns.sh  doSimpleRuns.sh  plotSurveyResults.ipynb  roofline_survey_utils.py  runRooflineSurvey.py
